<resources>
    <string name="app_name">MVVM</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>">
    <string name="title_landing_page">Welcome!\nPlease sign in</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="fetching_photos_from_server">Fetching photos from server</string>
</resources>